Add debug observability for the daily-reward path
Three layers for diagnosing why a task does/doesn't complete at runtime:

- Always-on INFO audit: each task completion logs "[onboarding] <player>
  completed <TASK> (via <source>)" (complete() now takes a detection source;
  recheck/listeners/rankup pass theirs, e.g. SessionsAPI vs playtime statistic).
- debug flag (config.yml debug: false): SessionsHook logs hook availability at
  startup and, per recheck, the SessionsAPI answer plus active-seconds/threshold.
  Gated because recheck runs every 30s per online player. Also warns once if
  TheatriaSessions is present but SessionsAPI.get() returns null (mid-reload).
- /starter debug [player] (admin): one-shot snapshot -- per-task state, available
  hooks, and the Sessions view of DAILY -- via SessionsHook.describe().

SessionsHook now takes the plugin (for the debug logger); docs updated.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019qDHmdoEjERNjqXFn8t3Ua